--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7007,3 +7007,34 @@ body {
     text-align: center;
     overflow: hidden;
 }
+
+.delete-warning {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    background-color: #fff;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 0 10px  0 #dedede;
+    -moz-box-shadow: 0 0 10px  0 #dedede;
+    box-shadow: 0 0 10px  0 rgba(0, 0, 0, 0.2);
+}
+.delete-warning__blick-text {
+    max-width: 300px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.delete-warning__text {
+    font-size: 22px;
+}
+.delete-warning__blick-link {
+    text-align: center;
+}
+.delete-warning__blick-link a {
+    margin: 0 20px;
+    font-size: 16px;
+}
