--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7011,9 +7011,9 @@ body {
 .delete-warning {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 50%);
     padding: 30px;
     background-color: #fff;
     -webkit-border-radius: 5px;
@@ -7030,6 +7030,7 @@ body {
 }
 .delete-warning__text {
     font-size: 22px;
+    color: #912e28;
 }
 .delete-warning__blick-link {
     text-align: center;
